logs/docker-tutorial.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/docker_tutorial'...
Listing './lib/python3.5/site-packages/docker_tutorial/migrations'...
Listing './lib/python3.5/site-packages/docker_tutorial/static'...
Listing './lib/python3.5/site-packages/docker_tutorial/static/css'...
Listing './lib/python3.5/site-packages/docker_tutorial/static/img'...
Listing './lib/python3.5/site-packages/docker_tutorial/static/js'...
Listing './lib/python3.5/site-packages/docker_tutorial/static/lib'...
Listing './lib/python3.5/site-packages/docker_tutorial/static/lib/css'...
Listing './lib/python3.5/site-packages/docker_tutorial/static/lib/js'...
Listing './lib/python3.5/site-packages/docker_tutorial/templates'...
Listing './lib/python3.5/site-packages/docker_tutorial/templates/tutorial'...
Listing './lib/python3.5/site-packages/docker_tutorial/tests'...
Compiling './lib/python3.5/site-packages/docker_tutorial/views.py'...
***   File "./lib/python3.5/site-packages/docker_tutorial/views.py", line 29
    print username
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/docker_tutorial-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/dockerfile_tutorial'...
Listing './lib/python3.5/site-packages/dockerfile_tutorial/static'...
Listing './lib/python3.5/site-packages/dockerfile_tutorial/static/css'...
Listing './lib/python3.5/site-packages/dockerfile_tutorial/static/js'...
Listing './lib/python3.5/site-packages/dockerfile_tutorial/templates'...
Listing './lib/python3.5/site-packages/dockerfile_tutorial/templates/dockerfile'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
